# ash-experiment

./: .gitignore  Cargo.toml  LICENSE  README.md  download_assets.py
examples/: Cargo.toml  basic.rs  build_shaders.bash
examples/assets/: gltf_test.gltf  gltf_texture.gltf  multi_texture.gltf
examples/lights/: main.rs  pipeline.rs
examples/lights/pipelines/: mesh_pipeline.rs  shadowmap_pipeline.rs
examples/lights/shaders/: lights.frag  lights.frag.spv  lights.vert  lights.vert.spv
examples/load_gltf/: main.rs  renderpass.rs
examples/load_model/: main.rs  pipeline.rs  renderpass.rs
examples/model_loading/: main.rs
examples/model_loading/pipelines/: mod.rs
examples/pipelines/: default.rs
examples/shaders/spv/: default.frag.spv  default.vert.spv  triangle.vert.spv
examples/src/: events.rs  gltf_importer.rs  lib.rs
examples/src/utils/: camera.rs  events.rs  gltf_importer.rs  mod.rs
examples/texture/: main.rs  pipeline.rs  renderpass.rs
examples/triangle/: main.rs  pipeline.rs  renderpass.rs
examples/triangle/pipelines/: default.rs  mod.rs
src/: base.rs  constants.rs  definitions.rs  lib.rs  prelude.rs
src/modules/: context.rs  debug.rs  debugger.rs  device.rs  frame.rs  helpers.rs  instance.rs  mod.rs  pipeline.rs  platforms.rs  queue.rs  surface.rs  swapchain.rs
src/pipelines/: default.rs
src/utilities/: buffer.rs  descriptor.rs  descriptors.rs  gltf_loader.rs  images.rs  mod.rs  pipeline.rs  platform.rs  renderpass.rs  shader.rs  textures.rs  tools.rs
src/utility/: buffer.rs  descriptors.rs  helpers.rs  mod.rs  shader.rs
