[package]
name = "vulkan"
version = "0.0.1"
edition = "2018"
authors = ["tonis.anton18@gmail.com"]

[dependencies]
winit = "0.20.0"
ash = { git = "https://github.com/MaikKlein/ash" }
log = "0.4"
env_logger = "0.7.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["windef", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.1"
cocoa = "0.20.0"
objc = "0.2.7"
