[package]
name = "vulkan"
version = "1.0.0"
edition = "2018"
authors = ["tonis"]

[dependencies]
winit     = "0.20.0"
ash       = "0.29.0"
cgmath    = "0.17.0"
memoffset = "0.5.1"
num       = "0.2"
tobj      = "0.1.10"
image     = "0.22"
vk-mem    = "0.2.0"

[dependencies.bitflags]
version = ">= 1.0.4"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }